@@ -277,7 +277,6 @@ struct { // Internal state
     char aneterr[ANET_ERR_LEN];
     int beast_fd; // Local Modes-S Beast handler
     struct net_service *services; // Active services
-    struct client *clients; // Our clients
     struct aircraft *aircrafts[AIRCRAFTS_BUCKETS];
     struct net_writer raw_out; // Raw output
     struct net_writer beast_out; // Beast-format output
